Settings & Tickets Table Created

--- a/ADV_Tax/DAL/DAL.csproj
+++ b/ADV_Tax/DAL/DAL.csproj
@@ -54,7 +54,10 @@
     <Compile Include="Class1.cs" />
     <Compile Include="EF\Models\Income.cs" />
     <Compile Include="EF\Models\Payment.cs" />
+    <Compile Include="EF\Models\PaymentSetting.cs" />
     <Compile Include="EF\Models\Role.cs" />
+    <Compile Include="EF\Models\Setting.cs" />
+    <Compile Include="EF\Models\Ticket.cs" />
     <Compile Include="EF\Models\User.cs" />
     <Compile Include="EF\TaxContext.cs" />
     <Compile Include="Migrations\202212060323293_UserRoleTableCreated.cs" />
@@ -76,6 +79,22 @@
     <Compile Include="Migrations\202212061539430_PaymentTableCreatedWithFK.cs" />
     <Compile Include="Migrations\202212061539430_PaymentTableCreatedWithFK.designer.cs">
       <DependentUpon>202212061539430_PaymentTableCreatedWithFK.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202212061553207_PaymentTableCreated.cs" />
+    <Compile Include="Migrations\202212061553207_PaymentTableCreated.designer.cs">
+      <DependentUpon>202212061553207_PaymentTableCreated.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202212061556581_PaymentTableCreated1.cs" />
+    <Compile Include="Migrations\202212061556581_PaymentTableCreated1.designer.cs">
+      <DependentUpon>202212061556581_PaymentTableCreated1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202212061602084_TicketsTableAdded.cs" />
+    <Compile Include="Migrations\202212061602084_TicketsTableAdded.designer.cs">
+      <DependentUpon>202212061602084_TicketsTableAdded.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202212061605235_TicketsTableAddedFK.cs" />
+    <Compile Include="Migrations\202212061605235_TicketsTableAddedFK.designer.cs">
+      <DependentUpon>202212061605235_TicketsTableAddedFK.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -103,6 +122,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202212061539430_PaymentTableCreatedWithFK.resx">
       <DependentUpon>202212061539430_PaymentTableCreatedWithFK.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202212061553207_PaymentTableCreated.resx">
+      <DependentUpon>202212061553207_PaymentTableCreated.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202212061556581_PaymentTableCreated1.resx">
+      <DependentUpon>202212061556581_PaymentTableCreated1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202212061602084_TicketsTableAdded.resx">
+      <DependentUpon>202212061602084_TicketsTableAdded.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202212061605235_TicketsTableAddedFK.resx">
+      <DependentUpon>202212061605235_TicketsTableAddedFK.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
