--- a/ADV_Tax/BLL/BLL.csproj
+++ b/ADV_Tax/BLL/BLL.csproj
@@ -49,6 +49,8 @@
     <Compile Include="DTOs\RoleDTO.cs" />
     <Compile Include="DTOs\UserDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IncomeService.cs" />
+    <Compile Include="Services\RoleService.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
