--- a/ADV_Tax/BLL/BLL.csproj
+++ b/ADV_Tax/BLL/BLL.csproj
@@ -46,11 +46,19 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="DTOs\IncomeDTO.cs" />
+    <Compile Include="DTOs\PaymentDTO.cs" />
+    <Compile Include="DTOs\PaymentSettingDTO.cs" />
     <Compile Include="DTOs\RoleDTO.cs" />
+    <Compile Include="DTOs\SettingDTO.cs" />
+    <Compile Include="DTOs\TicketDTO.cs" />
     <Compile Include="DTOs\UserDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IncomeService.cs" />
+    <Compile Include="Services\PaymentService.cs" />
+    <Compile Include="Services\PaymentSettingService.cs" />
     <Compile Include="Services\RoleService.cs" />
+    <Compile Include="Services\SettingService.cs" />
+    <Compile Include="Services\TicketService.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
