--- a/ADV_Tax/DAL/DAL.csproj
+++ b/ADV_Tax/DAL/DAL.csproj
@@ -59,8 +59,10 @@
     <Compile Include="EF\Models\Role.cs" />
     <Compile Include="EF\Models\Setting.cs" />
     <Compile Include="EF\Models\Ticket.cs" />
+    <Compile Include="EF\Models\Token.cs" />
     <Compile Include="EF\Models\User.cs" />
     <Compile Include="EF\TaxContext.cs" />
+    <Compile Include="Interfaces\IAuth.cs" />
     <Compile Include="Interfaces\IRepo.cs" />
     <Compile Include="Migrations\202212060323293_UserRoleTableCreated.cs" />
     <Compile Include="Migrations\202212060323293_UserRoleTableCreated.designer.cs">
@@ -102,6 +104,14 @@
     <Compile Include="Migrations\202212061609103_AllRequiredUpdated.designer.cs">
       <DependentUpon>202212061609103_AllRequiredUpdated.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202212211226020_UserTablePassword.cs" />
+    <Compile Include="Migrations\202212211226020_UserTablePassword.designer.cs">
+      <DependentUpon>202212211226020_UserTablePassword.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202212211308051_TokenTableAdded.cs" />
+    <Compile Include="Migrations\202212211308051_TokenTableAdded.designer.cs">
+      <DependentUpon>202212211308051_TokenTableAdded.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\IncomeRepo.cs" />
@@ -111,6 +121,7 @@
     <Compile Include="Repos\RoleRepo.cs" />
     <Compile Include="Repos\SettingsRepo.cs" />
     <Compile Include="Repos\TicketsRepo.cs" />
+    <Compile Include="Repos\TokenRepo.cs" />
     <Compile Include="Repos\UserRepo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -148,6 +159,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202212061609103_AllRequiredUpdated.resx">
       <DependentUpon>202212061609103_AllRequiredUpdated.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202212211226020_UserTablePassword.resx">
+      <DependentUpon>202212211226020_UserTablePassword.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202212211308051_TokenTableAdded.resx">
+      <DependentUpon>202212211308051_TokenTableAdded.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
